--- a/styles.css
+++ b/styles.css
@@ -497,3 +497,46 @@ footer {
         font-size: 0.6rem;
     }
 }
+[contenteditable="true"] {
+    padding: 0.3rem;
+    border-radius: 3px;
+    outline: none;
+    min-width: 60px;
+    display: inline-block;
+}
+
+[contenteditable="true"]:focus {
+    background-color: #f0f4ff;
+    box-shadow: 0 0 0 2px var(--accent-color);
+}
+
+/* Make sure form icons display properly */
+.form-cell {
+    display: flex;
+    gap: 3px;
+    justify-content: center;
+}
+
+.form-icon {
+    width: 18px;
+    height: 18px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.7rem;
+    font-weight: 700;
+    color: white;
+}
+
+.form-win {
+    background-color: #28a745;
+}
+
+.form-draw {
+    background-color: #6c757d;
+}
+
+.form-loss {
+    background-color: #dc3545;
+}
